# django_3_by_example

./: .flake8  .gitignore  README.md  mypy.ini  noxfile.py  pyproject.toml
.envs/: docker.env
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  ci.py  local.py
mysite/blog/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py
mysite/templates/blog/: base.html  list.html
