[tool.poetry]
name = "django-3-by-example"
version = "0.1.0"
description = "Code from Django 3 By Example"
authors = ["Mike Brannigan <mikejbrannigan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.4"
click = "^7.1.2"
gunicorn = "^20.0.4"
whitenoise = "^5.2.0"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
pytest = "^6.1.2"
nox = "^2020.8.22"
flake8 = "^3.8.4"
django-nox = "^0.0.2"
nox-poetry = "^0.6.0"
black = "^20.8b1"
flake8-django = "^1.1.1"
flake8-docstrings = "^1.5.0"
isort = "^5.7.0"
mypy = "^0.790"
django-stubs = "^1.7.0"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
